@@ -1,3 +1,7 @@
+Thu Jul 31 20:55:32 2003  Alex Waugh <alex@alexwaugh.com>
+
+	* common/_riscosify.s: Fix typo.
+
 Wed Jul 30 00:03:42 2003  Nick Burrett  <nick@dsvr.net>
 
 	* stdarg.h: Force GCC to use its own internal header.
